# ldap_allocs

./: .gitignore  README.md  apps.py  requirements.txt  setup.cfg  signals.py  utils.py
coldfront_plugin_ldap_allocs/: apps.py  signals.py  utils.py
coldfront_plugin_ldap_allocs/management/commands/: create_ldap_allocs_resources.py
ldap_allocs/: apps.py  config.py  signals.py  utils.py
src/coldfront_plugin_ldap_allocs/: __init__.py  config.py  signals.py  utils.py
