# setup.cfg

[metadata]
name = ldap_allocs
version = 0.1.0
description = 
long_description = file:README.md
url = https://github.com/cecilialau6776/ldap_allocs
license = MPL 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.9
setup_requires =
    setuptools >= 40.6.0
install_requires =
    Django >= 3.2
    coldfront >= 1.1.4
    ldap3 >= 2.9.1
    python-ldap >= 3.4.3